# pygates

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  examples.py  pyproject.toml
.github/workflows/: test.yml
src/pygates/: __init__.py  gates.py  truth_tables.py
tests/: __init__.py  test_gates.py
